// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Container should match a snapshot for favorites route 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addFavorite={[Function]}
    displayedMovie=""
    favorites={
        Array [
            Object {
              "movieId": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    hideMovieInfo={[Function]}
    logStatus={true}
    match={
        Object {
            "path": "/favorites",
          }
    }
    movies={
        Array [
            Object {
              "movieId": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    removeFavorite={[Function]}
    showMovieInfoById={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          displayInfo=""
          favBtnClass=""
          handleFavorite={[Function]}
          handleInfoDisplay={[Function]}
          information={
                    Object {
                              "movieId": 437670,
                              "overview": "A comedy that follows an con who lands a position at a",
                              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                              "releaseDate": "2017-10-26",
                              "title": "Suck Me Shakespeer 3",
                              "voteAverage": 6.2,
                            }
          }
          isFavorited="favorite"
          logStatus={true}
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "437670",
        "nodeType": "function",
        "props": Object {
          "displayInfo": "",
          "favBtnClass": "",
          "handleFavorite": [Function],
          "handleInfoDisplay": [Function],
          "information": Object {
            "movieId": 437670,
            "overview": "A comedy that follows an con who lands a position at a",
            "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
            "releaseDate": "2017-10-26",
            "title": "Suck Me Shakespeer 3",
            "voteAverage": 6.2,
          },
          "isFavorited": "favorite",
          "logStatus": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            displayInfo=""
            favBtnClass=""
            handleFavorite={[Function]}
            handleInfoDisplay={[Function]}
            information={
                        Object {
                                    "movieId": 437670,
                                    "overview": "A comedy that follows an con who lands a position at a",
                                    "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                                    "releaseDate": "2017-10-26",
                                    "title": "Suck Me Shakespeer 3",
                                    "voteAverage": 6.2,
                                  }
            }
            isFavorited="favorite"
            logStatus={true}
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "437670",
          "nodeType": "function",
          "props": Object {
            "displayInfo": "",
            "favBtnClass": "",
            "handleFavorite": [Function],
            "handleInfoDisplay": [Function],
            "information": Object {
              "movieId": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
            "isFavorited": "favorite",
            "logStatus": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card Container should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    addFavorite={[Function]}
    displayedMovie=""
    favorites={Array []}
    hideMovieInfo={[Function]}
    logStatus={true}
    match={
        Object {
            "path": "/",
          }
    }
    movies={
        Array [
            Object {
              "movieId": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
          ]
    }
    removeFavorite={[Function]}
    showMovieInfoById={[Function]}
    user={
        Object {
            "email": "taco@taco",
            "id": 1,
            "name": "Taco",
            "password": "taco",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          displayInfo=""
          favBtnClass=""
          handleFavorite={[Function]}
          handleInfoDisplay={[Function]}
          information={
                    Object {
                              "movieId": 437670,
                              "overview": "A comedy that follows an con who lands a position at a",
                              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                              "releaseDate": "2017-10-26",
                              "title": "Suck Me Shakespeer 3",
                              "voteAverage": 6.2,
                            }
          }
          isFavorited=""
          logStatus={true}
/>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "437670",
        "nodeType": "function",
        "props": Object {
          "displayInfo": "",
          "favBtnClass": "",
          "handleFavorite": [Function],
          "handleInfoDisplay": [Function],
          "information": Object {
            "movieId": 437670,
            "overview": "A comedy that follows an con who lands a position at a",
            "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
            "releaseDate": "2017-10-26",
            "title": "Suck Me Shakespeer 3",
            "voteAverage": 6.2,
          },
          "isFavorited": "",
          "logStatus": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            displayInfo=""
            favBtnClass=""
            handleFavorite={[Function]}
            handleInfoDisplay={[Function]}
            information={
                        Object {
                                    "movieId": 437670,
                                    "overview": "A comedy that follows an con who lands a position at a",
                                    "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
                                    "releaseDate": "2017-10-26",
                                    "title": "Suck Me Shakespeer 3",
                                    "voteAverage": 6.2,
                                  }
            }
            isFavorited=""
            logStatus={true}
/>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "437670",
          "nodeType": "function",
          "props": Object {
            "displayInfo": "",
            "favBtnClass": "",
            "handleFavorite": [Function],
            "handleInfoDisplay": [Function],
            "information": Object {
              "movieId": 437670,
              "overview": "A comedy that follows an con who lands a position at a",
              "posterPath": "/cypnifmPJ5JbTjzpZI6MwJdvP7.jpg",
              "releaseDate": "2017-10-26",
              "title": "Suck Me Shakespeer 3",
              "voteAverage": 6.2,
            },
            "isFavorited": "",
            "logStatus": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
